fix: hide overflow

--- a/css/components/no-mobile.css
+++ b/css/components/no-mobile.css
@@ -1,18 +1,24 @@
 #no-mobile {
-  position: absolute;
-  z-index: 99;
-  background-color: var(--yellow);
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 32px;
-  top: 0;
+  display: none;
 }
 
-@media screen and (max-width: 645px) {
+@media screen and (min-width: 645px) {
   #no-mobile {
-    display: none;
+    position: fixed;
+    z-index: 99;
+    background-color: var(--yellow);
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+    top: 0;
+  }
+
+  body {
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
   }
 }
